Userinitials in Header

--- a/contacts_copy.html
+++ b/contacts_copy.html
@@ -28,7 +28,7 @@
     <script src="js/users.js"></script>
   </head>
 
-  <body onload="InitContacts(); includeHTML();">
+  <body onload="InitContacts(), includeHTML(), initHead()">
     <div w3-include-html="assets/templates/header.html"></div>
 
     <div w3-include-html="assets/templates/sidebar.html"></div>
