--- a/help.html
+++ b/help.html
@@ -12,6 +12,7 @@
     />
     <script src="js/header.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/storage.js" defer></script>
 
     <link rel="stylesheet" href="./css/sidebar.css" />
     <link rel="stylesheet" href="./css/contacts.css" />
@@ -23,7 +24,7 @@
 
   <!----<body onload="Init(); includeHTML(); addActiveClass6();"> -->
    
-   <body onload="includeHTML()">
+   <body onload="includeHTML(), initHead()">
   <!---- <header w3-include-html="./assets/templates/header.html"></header>
     <section w3-include-html="./assets/templates/sidebar.html"></section>-->
 
