--- a/board.html
+++ b/board.html
@@ -28,7 +28,7 @@
       type="image/x-icon"
     />
   </head>
-  <body onload="initBoard()">
+  <body onload="initBoard(), initHead()">
     <!----Mona 
     <header w3-include-html="./assets/templates/header.html"></header>
     <section w3-include-html="./assets/templates/sidebar.html"></section> -->
