--- a/summary.html
+++ b/summary.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./css/summary.css" />
   </head>
 
-  <body onload="initSummary()">
+  <body onload="initSummary(), initHead()">
     <div w3-include-html="assets/templates/header.html"></div>
 
     <div w3-include-html="assets/templates/sidebar.html"></div>
