task render 1 initial

--- a/task.html
+++ b/task.html
@@ -21,9 +21,6 @@
   </head>
 
   <body onload="init(),initHead(), addActiveClass2()">
-    <!----Mona 
-    <header w3-include-html="./assets/templates/header.html"></header>
-    <section w3-include-html="./assets/templates/sidebar.html"></section> -->
 
     <div w3-include-html="assets/templates/header.html"></div>
 
@@ -199,8 +196,8 @@
             <div class="task-submit-container">
               <div class="task-required-text">
                 <svg class="task-form-star" viewBox="0 0 16 16">
-                  <use href="assets/img/icons.svg#star-icon"></use></svg
-                >This field is required
+                  <use href="assets/img/icons.svg#star-icon"></use></svg>
+                  This field is required
               </div>
               <div class="task-submit-buttons">
                 <button
