Only 1 Contact Page
Margin for fixed Header on: Bord, summary & Contacts
task in bord responsiv
revert back arrow/ legal notice out

--- a/board.html
+++ b/board.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/board.css" />
 
     <link rel="stylesheet" href="./css/task.css" />
+    <link rel="stylesheet" href="css/task_responsive.css" />
 
     <link rel="stylesheet" href="./css/sidebar.css" />
     <link rel="stylesheet" href="./css/header.css" />
