--- a/task.html
+++ b/task.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/contacts-overlay-responsive.css" />
   </head>
 
-  <body onload="init(),initHead(), addActiveClass2()">
+  <body onload="init(), initHead()">
 
     <div w3-include-html="assets/templates/header.html"></div>
 
@@ -238,6 +238,7 @@
     <div w3-include-html="assets/templates/mobile.html"></div>
 
     <script src="js/script.js"></script>
+    <script src="js/add_task_templates.js"></script>
     <script src="js/add_task.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/header.js"></script>
