Board Code Cleaned

--- a/board.html
+++ b/board.html
@@ -16,9 +16,12 @@
     <link rel="stylesheet" href="./css/header.css" />
 
     <script src="js/board.js" defer></script>
+    <script src="js/board_help_functions.js" defer></script>
+    <script src="js/board_templates.js" defer></script>
 
     <script src="js/script.js" defer></script>
     <script src="js/add_task.js" defer></script>
+    <script src="js/add_task_templates.js" defer></script>
     <script src="js/storage.js" defer></script>
     <script src="js/header.js"></script>
 
