--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
   </div>
 
   <script src="js/storage.js"></script>
+  <script src="js/login_templates.js"></script>
+  <script src="js/login_error.js"></script>
   <script src="js/login.js"></script>
 </body>
 
