--- a/task.html
+++ b/task.html
@@ -239,6 +239,7 @@
 
     <script src="js/script.js"></script>
     <script src="js/add_task_templates.js"></script>
+    <script src="js/add_task_dropdown.js"></script>
     <script src="js/add_task.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/header.js"></script>
