--- a/task.html
+++ b/task.html
@@ -238,10 +238,11 @@
     <div w3-include-html="assets/templates/mobile.html"></div>
 
     <script src="js/script.js"></script>
+    <script src="js/storage.js"></script>
     <script src="js/add_task_templates.js"></script>
     <script src="js/add_task_dropdown.js"></script>
     <script src="js/add_task.js"></script>
-    <script src="js/storage.js"></script>
     <script src="js/header.js"></script>
+    <script src="js/contacts.js"></script>
   </body>
 </html>
