contact added success message

--- a/contacts.html
+++ b/contacts.html
@@ -53,6 +53,11 @@
     </section>
     <div id="contactInfoContainer"></div>
     <div id="newContactContainer"></div>
+    <div class="contact-success" id="success-contact">
+      <div class="contact-success-container" id="success-contact-animation">
+        <span class="success-message">Contact successfully created</span>
+      </div>
+    </div>
     <div w3-include-html="assets/templates/mobile.html"></div>
   </body>
 </html>
