--- a/task.html
+++ b/task.html
@@ -221,7 +221,7 @@
           </form>
           <div class="loader-overlay d-none" id="loader-overlay"></div>
           <div id="loader"></div>
-          <div class="success d-none" id="success">
+          <div class="success d-none" id="success-task">
             <div class="success-container">
               <span class="success-message">Task added to board</span>
               <img
@@ -229,6 +229,11 @@
                 src="img/board-icon.svg"
                 alt="Board icon"
               />
+            </div>
+          </div>
+          <div class="success-contact" id="success-contact">
+            <div class="success-contact-container" id="success-contact-animation">
+              <span class="success-message">Contact successfully created</span>
             </div>
           </div>
         </div>
