--- a/contacts_copy.html
+++ b/contacts_copy.html
@@ -42,7 +42,7 @@
     <div class="contactHeadlineContent" id="contactHeadlineContent">
       <div class="headlineContacts">Contacts</div>
       <div class="borderStyle"></div>
-      <div class="textBetter">Better with a team</div>
+      <div class="textBetter">Better with a team!</div>
     </div>
     <section class="contactOverview">
       <button class="addContactBtn" onclick="showOverlay()">
