--- a/board.html
+++ b/board.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/open_sans.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/board.css" />
+    <link rel="stylesheet" href="./css/board_responsive.css" />
 
     <link rel="stylesheet" href="./css/task.css" />
     <link rel="stylesheet" href="css/task_responsive.css" />
@@ -22,6 +23,7 @@
     <script src="js/script.js" defer></script>
     <script src="js/add_task.js" defer></script>
     <script src="js/add_task_templates.js" defer></script>
+    <script src="js/add_task_dropdown.js" defer></script>
     <script src="js/storage.js" defer></script>
     <script src="js/header.js"></script>
 
@@ -54,10 +56,7 @@
             <input id="findTask" type="text" placeholder="Find Task" />
             <div class="findTaskImg" onclick="searchTask()"></div>
           </div>
-          <button
-            class="addTaskDesktop"
-            onclick="addTaskOnBoard('toDoStatus'); includeHTML()"
-          >
+          <button class="addTaskDesktop" onclick="addTaskOnBoard('toDoStatus')">
             Add task
             <img src="img/board_add_taks.png" alt="" />
           </button>
