Fixed back Arrow

--- a/help.html
+++ b/help.html
@@ -32,7 +32,7 @@
 
     <div w3-include-html="assets/templates/sidebar.html"></div>
     <img
-      class="backArrow"
+      class="backArrowLegal"
       onclick="history.back()"
       src="./img/backArrow.svg"
       alt="Back Arow"
