--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="content" id="content">
     <div class="login-signup desktop-only" id="login-signup">
       <span class="login-signup-text">Not a Join user?</span>
-      <button class="main-button main-button-signup" onclick="renderRegister()">
+      <button class="main-button main-button-signup" onclick="renderSection('register')">
         Sign up
       </button>
     </div>
@@ -61,7 +61,7 @@
       </div>
       <div class="login-signup login-signup-mobile" id="login-signup">
         <span class="login-signup-text">Not a Join user?</span>
-        <button class="main-button main-button-signup" onclick="renderRegister()">
+        <button class="main-button main-button-signup" onclick="renderSection('register')">
           Sign up
         </button>
       </div>
