unnecessary comments deleted

--- a/help.html
+++ b/help.html
@@ -22,13 +22,8 @@
     <link rel="stylesheet" href="./css/legal-notice.css" />
   </head>
 
-  <!----<body onload="Init(); includeHTML(); addActiveClass6();"> -->
-   
-   <body onload="includeHTML(), initHead()">
-  <!---- <header w3-include-html="./assets/templates/header.html"></header>
-    <section w3-include-html="./assets/templates/sidebar.html"></section>-->
-
-    <div w3-include-html="assets/templates/header.html"></div> 
+  <body onload="includeHTML(), initHead()">
+    <div w3-include-html="assets/templates/header.html"></div>
 
     <div w3-include-html="assets/templates/sidebar.html"></div>
     <img
@@ -140,12 +135,6 @@
       </div>
 
       <div w3-include-html="assets/templates/mobile.html"></div>
-
-      <!---
-    <div w3-include-html="assets/templates/sidebar.html"></div>
-    <div class="headlineContacts">help</div>
-      <h2 class="mb24">Enjoy using Join!</h2>
-    </section>-->
-
+    </section>
   </body>
 </html>
