--- a/board.html
+++ b/board.html
@@ -24,6 +24,7 @@
     <script src="js/add_task.js" defer></script>
     <script src="js/add_task_templates.js" defer></script>
     <script src="js/add_task_dropdown.js" defer></script>
+    <script src="js/add_task_contact.js"></script>
     <script src="js/storage.js" defer></script>
     <script src="js/header.js"></script>
 
