--- a/task.html
+++ b/task.html
@@ -246,6 +246,7 @@
     <script src="js/storage.js"></script>
     <script src="js/add_task_templates.js"></script>
     <script src="js/add_task_dropdown.js"></script>
+    <script src="js/add_task_contact.js"></script>
     <script src="js/add_task.js"></script>
     <script src="js/header.js"></script>
     <script src="js/contacts.js"></script>
