--- a/board.html
+++ b/board.html
@@ -28,6 +28,7 @@
     <script src="js/add_task_dropdown.js" defer></script>
     <script src="js/add_task_contact.js"></script>
     <script src="js/storage.js" defer></script>
+    <script src="js/backup_arrays.js" defer></script>
     <script src="js/header.js"></script>
 
     <title>Board</title>
